# shuvlog

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: compile.yml
include/logger/: BuildInfo.h  Colors.h  FileSink.h  Level.h  Log.h  Logger.h  OsInfo.h  Settings.h  Sink.h  Thread.h  ThreadSafeQueue.h  Timestamp.h
include/logger/Exceptions/: BadFileExtension.h  BadRecommendedExtension.h  CouldNotOpenFile.h  DuplicateSink.h  InvalidLevel.h  LoggerException.h
include/logger/Sinks/: ConsoleSink.h  JsonFileSink.h  LogFileSink.h  NdJsonFileSink.h
src/: BuildInfo.cpp  FileSink.cpp  FileSink.h  Log.cpp  Log.h  Logger.cpp  OsInfo.cpp  Settings.cpp  Sink.cpp  Sink.h  Timestamp.cpp  Timestamp.h
src/Sinks/: ConsoleSink.cpp  JsonFileSink.cpp  LogFileSink.cpp  NdJsonFileSink.cpp
tests/: Tester3000.cpp
